--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
-    font-family: Norse;
+    font-family: "Norse";
     font-size: 3rem;
     width: 35vw;
 }
